dev-environment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-environment
  namespace: biolytics-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-environment
  template:
    metadata:
      labels:
        app: dev-environment
    spec:
      containers:
      - name: code-server
        image: ghcr.io/biolytics-ai/k8s-dev-env/vscode-bastion-devcontainer:latest
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 0
        volumeMounts:
          - name: vscode-data
            mountPath: /data
      volumes:
        - name: vscode-data
          emptyDir: {}
