dev-environment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-environment-service
  namespace: biolytics-dev
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: dev-environment
